--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "daily_progress_bar",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leomarcel/daily_progress_bar.git"
+  },
+  "author": "Leo Marcel",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
